paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/array_decl_2/sample_004/target.compile.log
error[E0277]: `main` has invalid return type `i32`
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/array_decl_2/sample_004/target.rs:22:14
   |
22 | fn main() -> i32 {
   |              ^^^ `main` can only return types that implement `Termination`
   |
   = help: consider using `()`, or a `Result`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.